[gd_scene load_steps=9 format=3 uid="uid://dxl3ux16ac1je"]

[ext_resource type="Texture2D" uid="uid://brxh0vot2j5yu" path="res://RTSAssets/house.png" id="1_pa4v8"]
[ext_resource type="Script" path="res://wizard_building.gd" id="2_02ey2"]
[ext_resource type="PackedScene" uid="uid://cl7sthot5tpon" path="res://building_mode.tscn" id="3_6rvre"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jshyh"]
size = Vector2(28, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j08f7"]
size = Vector2(32, 18)

[sub_resource type="Animation" id="Animation_uiua6"]
resource_name = "building"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.9, 1), Vector2(1, 1), Vector2(1, 0.9)]
}

[sub_resource type="Animation" id="Animation_1eomf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1wcdv"]
_data = {
"RESET": SubResource("Animation_1eomf"),
"building": SubResource("Animation_uiua6")
}

[node name="WizardBuilding" type="Sprite2D"]
texture = ExtResource("1_pa4v8")
script = ExtResource("2_02ey2")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 5
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(2, -6)
shape = SubResource("RectangleShape2D_jshyh")
disabled = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, 7)
shape = SubResource("RectangleShape2D_j08f7")
disabled = true

[node name="SpawnPosition" type="Node2D" parent="."]
position = Vector2(-8, 24)

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 8.0

[node name="BuildingMode" parent="." node_paths=PackedStringArray("parent_building") instance=ExtResource("3_6rvre")]
building_area = Rect2(0, 0, 32, 32)
parent_building = NodePath("..")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../ProgressBar")
autoplay = "RESET"
libraries = {
"": SubResource("AnimationLibrary_1wcdv")
}

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = -12.0
show_percentage = false

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
